--- a/public/assets/frontend/css/stylesheet.css
+++ b/public/assets/frontend/css/stylesheet.css
@@ -95,7 +95,7 @@ label {cursor: pointer;}
 
 /********** Search Bar **********/
 #header #search { position:absolute; top:35px; right:340px;}
-#header .button-search { background:url('../image/button-search.png') center center no-repeat; width:34px;height:34px ;position:absolute; right:0; cursor:pointer; float:right;}
+#header .button-search { background:url('../image/button-search.png') center center no-repeat; width:34px;height:34px ;position:absolute; right:0; cursor:pointer; float:right; border: none;}
 #header #search input {background:#FFF; padding:0 10px; width:300px; height:32px; line-height:32px; font-size:13px; color:#333; outline:none;}
 
 
@@ -205,11 +205,12 @@ table.radio tr.highlight:hover td { background: #f8f6f6; cursor: pointer; }
 
 /*********** Pagination ***********/
 .pagination { border-top: 1px solid #EEEEEE; padding-top: 8px; display: inline-block; width: 100%; margin-bottom: 10px; }
+.pagination ul {border-top:none;}
 .pagination .links { float: left; }
-.pagination .links a { vertical-align:middle; display: inline-block; border: 1px solid #EEEEEE; padding: 4px 10px; text-decoration: none; color: #777; }
-.pagination .links b {vertical-align:middle; display: inline-block; border: 1px solid #d45c93; padding: 4px 10px; font-weight: normal; text-decoration: none; color: #fff; background: #d45c93; }
-.pagination .links a:hover { color:#d45c93; border: 1px solid #ccc; }
-.pagination .results { float: right; padding-top: 3px; }
+.pagination .links li{ vertical-align:middle; display: inline-block; border: 1px solid #EEEEEE; padding: 4px 10px; text-decoration: none; color: #777; }
+.pagination .links li:hover { color:#d45c93; border: 1px solid #ccc; }
+.pagination .links li.active {vertical-align:middle; display: inline-block; border: 1px solid #d45c93; padding: 4px 10px; font-weight: normal; text-decoration: none; color: #fff; background: #d45c93; }
+.pagination .results { float: right; padding-top: 3px; list-style-type: none; }
 
 /*********** button ***********/
 
